# cuantico

./: NOTAS.md  README.md  TUTORIAL.md  pyproject.toml
app/api/: main.py  routes.py  schemas.py
app/application/: ports.py  use_cases.py
app/domain/: calendar.py  exceptions.py  models.py  refund_policy.py
app/infrastructure/: memory_repo.py  seed_loader.py
data/: seed.json
tests/: conftest.py  test_api.py  test_calendar_rules.py  test_refunds.py  test_seed_loader.py  test_use_cases.py
